HVAC Backup 2/objects/Department_ESA_SDE_SDH__c(1).object
<CustomObject>
    <fields>
        <fullName>Branch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Branch</label>
        <referenceTo>Branch__c</referenceTo>
        <relationshipLabel>Department ESA SDE/SDH</relationshipLabel>
        <relationshipName>Department_ESA_SDE_SDH</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Channel_Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Channel Partner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Department ESA SDE/SDH</relationshipLabel>
        <relationshipName>Department_ESA_SDE_SDH</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Department</label>
        <referenceTo>Department__c</referenceTo>
        <relationshipLabel>Department ESA SDE/SDH</relationshipLabel>
        <relationshipName>Department_ESA_SDE_SDH</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Preferred_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Preferred Location</label>
        <referenceTo>Location</referenceTo>
        <relationshipLabel>Department ESA SDE/SDH</relationshipLabel>
        <relationshipName>Department_ESA_SDE_SDH</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Department_ESA_SDE_SDH</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Department ESA SDE/SDH</label>
    <nameField>
        <displayFormat>DES-{0000}</displayFormat>
        <label>Department ESA SDE/SDH Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Department ESA SDE/SDH</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>